examples/failing/OverlappingReExport/A.purs
module A where
x = true
